--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Ejercicio con Node </title>
 </head>
 <body>
-    
+<h2>Trabajando con NODE y JavaScript </h2>
+
+    <script src="index.js"></script>
 </body>
 </html>
